observable/kubefiles/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: quarkus-observable-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable
spec:
  hosts:
  - "*"
  gateways:
  - quarkus-observable-gateway
  http:
    - match:
        - uri:
            exact: /hello
      route:
        - destination:
            host: quarkus-observable-demo-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /demo
      rewrite:
        uri: /
      route:
        - destination:
            host: quarkus-observable-demo-service
            port:
              number: 8080
---
