observable/kubefiles/istio/virtual-services-fault-injection.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable-demo
spec:
  hosts:
  - quarkus-observable-demo
  http:
  - route:
    - destination:
        host: quarkus-observable-demo-service
        subset: latest
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable-server
spec:
  hosts:
  - quarkus-observable-server-service
  http:
  - fault:
      abort:
        httpStatus: 404
        percent: 60
    route:
    - destination:
        host: quarkus-observable-server-service
        subset: latest
      weight: 100
---
