observable/kubefiles/istio/virtual-services-rollout-75-25.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable-demo
spec:
  hosts:
  - quarkus-observable-demo-service
  http:
  - route:
    - destination:
        host: quarkus-observable-demo-service
        subset: latest
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable-server
spec:
  hosts:
  - quarkus-observable-server-service
  http:
  - route:
    - destination:
        host: quarkus-observable-server-service
        subset: latest
      weight: 75
    - destination:
        host: quarkus-observable-server-service
        subset: latest
      weight: 25
---
