observable/kubefiles/istio/virtual-services-timeout-injection.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable-demo
spec:
  hosts:
  - quarkus-observable-demo
  http:
  - route:
    - destination:
        host: quarkus-observable-demo-service
        subset: latest
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-observable-server
spec:
  hosts: quarkus-observable-server-service
  http:
    - fault:
        delay:
          fixedDelay: 1s
          percent: 75
      route:
        - destination:
            host: quarkus-observable-server-service
            subset: latest
          weight: 100
        - destination:
            host: quarkus-observable-server-service
            subset: v11
      timeout: 2s
---
